~ Java execution arguments matched with MD. ~ Available output format names fixed. ~ Usage command help screen fixed. ~ Case insensitive comparation for -help argument in windows. ~ readme.md finished.